# Arcanaith

./: .gitignore  Cargo.toml  LICENSE  readme.md
ecs/: Cargo.toml
ecs/src/: lib.rs
ecs/src/component/: composition.rs  input.rs  mod.rs  physics.rs  player.rs  position.rs  text.rs  visual.rs
ecs/src/entity/: mod.rs
ecs/src/system/: mod.rs  physics.rs  render.rs
ecs/src/system/input/: mod.rs  mouse.rs
ecs/src/system/resource/: font.rs  mod.rs  text.rs  texture.rs
game/: Cargo.toml
game/src/: constants.rs  lib.rs  main.rs
game/src/ecs/component/: input.rs  mod.rs  position.rs
game/src/ecs/system/resource/: mod.rs  text.rs
game/src/game/: app.rs  event.rs  mod.rs
game/src/objects/: button.rs  icon_text.rs  label.rs  mod.rs
game/src/scenes/: mod.rs
game/src/scenes/game/: mod.rs  overlay.rs
game/src/scenes/menu/: main_menu.rs  mod.rs  settings_menu.rs
game/src/vulkan/: internal.rs  wrapper.rs
game/src/vulkan/structs/: image_data.rs  mod.rs  mvp.rs  ssbo.rs
game/src/window/: mod.rs  renderer.rs
objects/: Cargo.toml
objects/src/: lib.rs
objects/src/factory/: button.rs  icon_text.rs  label.rs  mod.rs  status_bar.rs
rendering/: Cargo.toml
rendering/src/: context.rs  lib.rs  window.rs
rendering/src/api/: mod.rs  vulkan.rs
rendering/vulkan/: Cargo.toml
rendering/vulkan/src/internal/: external.rs  mod.rs
rendering/vulkan/src/public/: mod.rs  setup.rs
rendering/vulkan/src/structs/: image.rs  mvp.rs  ssbo.rs
res/: texture_table.json
res/sprites/: notes.txt
scripts/: compile_shaders.ps1
shaders/: shader.frag  shader.vert
src/: constants.rs  game.rs  lib.rs  main.rs  scene.rs  shader_structs.rs  vertex.rs  vulkan.rs  window.rs
src/ecs/: entity.rs  mod.rs
src/ecs/component/: composition.rs  hover.rs  input.rs  mod.rs  physics.rs  player.rs  position.rs  text.rs  visual.rs
src/ecs/entity/: loader.rs  mod.rs
src/ecs/entity/loader/: mod.rs
src/ecs/entity/loader/game/: mod.rs  overlay.rs  player.rs
src/ecs/entity/loader/menu/: main_menu.rs  mod.rs  settings.rs
src/ecs/system/: input.rs  mod.rs  physics.rs  render.rs
src/ecs/system/input/: game.rs  menu.rs  mod.rs  mouse.rs
src/ecs/system/position/: mod.rs
src/ecs/system/render/: mod.rs  quad.rs
src/ecs/system/resource/: assets.rs  font.rs  loader.rs  loading.rs  mod.rs  sprites.rs  text.rs  texture.rs
src/game/: app.rs  event.rs  mod.rs  object.rs  scene.rs  sprites.rs
src/objects/: button.rs  icon_text.rs  label.rs  mod.rs  player.rs  quad.rs  status_bar.rs
src/scenes/: game.rs  menu.rs  mod.rs
src/scenes/game/: mod.rs  overlay.rs
src/scenes/menu/: main_menu.rs  mod.rs  settings_menu.rs
src/vulkan/: initializer.rs  internal.rs  mod.rs  renderer.rs  shader_structs.rs  wrapper.rs
src/vulkan/structs/: image_data.rs  mod.rs  mvp.rs  ssbo.rs  vertex.rs
src/window/: mod.rs  renderer.rs  vulkan.rs
vulkan/: Cargo.toml
vulkan/src/: internal.rs  lib.rs  public.rs
vulkan/src/internal/: mod.rs
vulkan/src/structs/: image.rs  mod.rs  shader_module.rs  ssbo.rs  vertex.rs
