[package]
name = "witch_s_ascendancy"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Marciland/Witch-s-Ascendancy"
license-file = "LICENSE"
description = "A game utilising rust with vulkan."
keywords = ["gamedev", "vulkan"]
categories = ["rendering", "games"]

[dependencies]
ash = { version = "0.38.0", default-features = false, features = ["linked"] }
ash-window = "0.13.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
winit = { version = "0.30.5", default-features = false, features = ["rwh_06"] }
glam = { version = "0.29.2", default-features = false, features = ["std"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.133", default-features = false, features = [
    "std",
] }
indexmap = { version = "2.6.0", default-features = false, features = ["std"] }
ab_glyph = { version = "0.2.29", default-features = false, features = ["std"] }

[profile.dev]
debug = true

[lints.clippy]
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
cargo = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
