[workspace]
members = ["game", "ecs"]
resolver = "2"

[profile.dev]
debug = true

[workspace.dependencies]
ash = { version = "0.38.0", default-features = false, features = ["linked"] }
glam = { version = "0.29.2", default-features = false, features = ["std"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }
indexmap = { version = "2.6.0", default-features = false, features = ["std"] }
winit = { version = "0.30.5", default-features = false, features = ["rwh_06"] }
