[package]
name = "objects"
version = "0.1.0"
authors = ["Marcel Witoschek <marcel.marciland@gmail.com>"]
edition = "2021"
repository = "https://github.com/Marciland/Witch-s-Ascendancy/objects"
description = "Object creation wraps ecs."
license-file = "LICENSE"
keywords = ["object-creation"]
readme = "readme.md"
categories = ["games"]

[dependencies]
ecs = { version = "*", path = "../ecs" }
glam = { workspace = true }
winit = { workspace = true }

[lints]
workspace = true
