[package]
name = "rendering"
version = "0.1.0"
authors = ["Marcel Witoschek <marcel.marciland@gmail.com>"]
edition = "2021"
repository = "https://github.com/Marciland/Arcanaith/rendering"
description = "Rendering."
license-file = "LICENSE"
keywords = ["rendering"]
readme = "readme.md"
categories = ["games"]

[dependencies]
vulkan = { version = "*", path = "vulkan" }
ash = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
