[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Marciland/Witch-s-Ascendancy/vulkan"
license-file = "LICENSE"
description = "Vulkan rendering"
keywords = ["vulkan"]
categories = ["rendering"]
readme = "readme.md"

[dependencies]
ash = { workspace = true, features = ["linked"] }
glam = { workspace = true, features = ["std"] }
winit = { workspace = true, features = ["rwh_06"] }
ash-window = "0.13.0"

[lints]
workspace = true
